@@ -5,7 +5,7 @@
 #readelf: -WSsrl
 #target: powerpc*-*-*
 
-There are 18 section headers.*
+There are 16 section headers.*
 
 Section Headers:
  +\[Nr\] Name +Type +Addr +Off +Size +ES Flg Lk Inf Al
@@ -17,16 +17,14 @@ Section Headers:
  +\[ 5\] \.rela\.dyn +.*
  +\[ 6\] \.rela\.plt +.*
  +\[ 7\] \.text +PROGBITS +01800244 000244 000070 00 +AX +0 +0 +1
- +\[ 8\] \.sdata2 +PROGBITS +.*
- +\[ 9\] \.tdata +PROGBITS +018102b4 0002b4 00001c 00 WAT +0 +0 +4
- +\[10\] \.tbss +NOBITS +018102d0 0002d0 00001c 00 WAT +0 +0 +4
- +\[11\] \.dynamic +DYNAMIC +018102d0 0002d0 0000a0 08 +WA +4 +0 +4
- +\[12\] \.got +PROGBITS +01810370 000370 00001c 04 WAX +0 +0 +4
- +\[13\] \.sdata +PROGBITS +0181038c 00038c 000000 00 +WA +0 +0 +4
- +\[14\] \.plt +NOBITS +.*
- +\[15\] \.shstrtab +STRTAB +.*
- +\[16\] \.symtab +SYMTAB +.*
- +\[17\] \.strtab +STRTAB +.*
+ +\[ 8\] \.tdata +PROGBITS +018102b4 0002b4 00001c 00 WAT +0 +0 +4
+ +\[ 9\] \.tbss +NOBITS +018102d0 0002d0 00001c 00 WAT +0 +0 +4
+ +\[10\] \.dynamic +DYNAMIC +018102d0 0002d0 0000a0 08 +WA +4 +0 +4
+ +\[11\] \.got +PROGBITS +01810370 000370 00001c 04 WAX +0 +0 +4
+ +\[12\] \.plt +NOBITS +.*
+ +\[13\] \.shstrtab +STRTAB +.*
+ +\[14\] \.symtab +SYMTAB +.*
+ +\[15\] \.strtab +STRTAB +.*
 #...
 
 Elf file type is EXEC \(Executable file\)
@@ -63,59 +61,55 @@ Relocation section '\.rela\.plt' at offset 0x238 contains 1 entries:
 
 Symbol table '\.dynsym' contains 9 entries:
  +Num: +Value +Size Type +Bind +Vis +Ndx Name
- +0: 00000000 +0 NOTYPE +LOCAL +DEFAULT +UND 
- +1: 018102d0 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
- +2: 00000000 +0 TLS +GLOBAL DEFAULT +UND gd
- +3: 018103d4 +0 FUNC +GLOBAL DEFAULT +UND __tls_get_addr
- +4: 00000000 +0 TLS +GLOBAL DEFAULT +UND ld
- +5: 018103e0 +0 NOTYPE +GLOBAL DEFAULT +ABS __end
- +6: 0181038c +0 NOTYPE +GLOBAL DEFAULT +ABS __bss_start
- +7: 0181038c +0 NOTYPE +GLOBAL DEFAULT +ABS _edata
- +8: 018103e0 +0 NOTYPE +GLOBAL DEFAULT +ABS _end
+.*: 00000000 +0 NOTYPE +LOCAL +DEFAULT +UND 
+.*: 018102d0 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
+.*: 00000000 +0 TLS +GLOBAL DEFAULT +UND gd
+.*: 018103d4 +0 FUNC +GLOBAL DEFAULT +UND __tls_get_addr
+.*: 00000000 +0 TLS +GLOBAL DEFAULT +UND ld
+.*: 018103e0 +0 NOTYPE +GLOBAL DEFAULT +ABS __end
+.*: 0181038c +0 NOTYPE +GLOBAL DEFAULT +ABS __bss_start
+.*: 0181038c +0 NOTYPE +GLOBAL DEFAULT +ABS _edata
+.*: 018103e0 +0 NOTYPE +GLOBAL DEFAULT +ABS _end
 
-Symbol table '\.symtab' contains 44 entries:
+Symbol table '\.symtab' contains 40 entries:
  +Num: +Value +Size Type +Bind +Vis +Ndx Name
- +[0-9]+: 00000000 +0 NOTYPE +LOCAL +DEFAULT +UND 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +1 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +2 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +3 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +4 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +5 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +6 
- +[0-9]+: 01800244 +0 SECTION LOCAL +DEFAULT +7 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +8 
- +[0-9]+: 018102b4 +0 SECTION LOCAL +DEFAULT +9 
- +[0-9]+: 018102d0 +0 SECTION LOCAL +DEFAULT +10 
- +[0-9]+: 018102d0 +0 SECTION LOCAL +DEFAULT +11 
- +[0-9]+: 01810370 +0 SECTION LOCAL +DEFAULT +12 
- +[0-9]+: 0181038c +0 SECTION LOCAL +DEFAULT +13 
- +[0-9]+: 0181038c +0 SECTION LOCAL +DEFAULT +14 
- +[0-9]+: 00000000 +0 SECTION LOCAL +DEFAULT +15 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +16 
- +[0-9]+: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +17 
- +[0-9]+: 00000000 +0 TLS +LOCAL +DEFAULT +9 gd4
- +[0-9]+: 00000004 +0 TLS +LOCAL +DEFAULT +9 ld4
- +[0-9]+: 00000008 +0 TLS +LOCAL +DEFAULT +9 ld5
- +[0-9]+: 0000000c +0 TLS +LOCAL +DEFAULT +9 ld6
- +[0-9]+: 00000010 +0 TLS +LOCAL +DEFAULT +9 ie4
- +[0-9]+: 00000014 +0 TLS +LOCAL +DEFAULT +9 le4
- +[0-9]+: 00000018 +0 TLS +LOCAL +DEFAULT +9 le5
- +[0-9]+: 018102d0 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
- +[0-9]+: 00000000 +0 TLS +GLOBAL DEFAULT +UND gd
- +[0-9]+: 00000030 +0 TLS +GLOBAL DEFAULT +10 le0
- +[0-9]+: [0-9a-f]+ +0 FUNC +GLOBAL DEFAULT +UND __tls_get_addr
- +[0-9]+: 00000020 +0 TLS +GLOBAL DEFAULT +10 ld0
- +[0-9]+: 00000034 +0 TLS +GLOBAL DEFAULT +10 le1
- +[0-9]+: 00000000 +0 TLS +GLOBAL DEFAULT +UND ld
- +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +7 _start
- +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS __end
- +[0-9]+: [0-9a-f]+ +0 OBJECT +GLOBAL DEFAULT +13 _SDA_BASE_
- +[0-9]+: 00000028 +0 TLS +GLOBAL DEFAULT +10 ld2
- +[0-9]+: 00000024 +0 TLS +GLOBAL DEFAULT +10 ld1
- +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS __bss_start
- +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _edata
- +[0-9]+: 01810374 +0 OBJECT +GLOBAL +HIDDEN +12 _GLOBAL_OFFSET_TABLE_
- +[0-9]+: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _end
- +[0-9]+: 0000001c +0 TLS +GLOBAL DEFAULT +10 gd0
- +[0-9]+: 0000002c +0 TLS +GLOBAL DEFAULT +10 ie0
- +[0-9]+: [0-9a-f]+ +0 OBJECT +GLOBAL DEFAULT +8 _SDA2_BASE_
+.*: 00000000 +0 NOTYPE +LOCAL +DEFAULT +UND 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +1 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +2 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +3 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +4 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +5 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +6 
+.*: 01800244 +0 SECTION LOCAL +DEFAULT +7 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +8 
+.*: 018102d0 +0 SECTION LOCAL +DEFAULT +9 
+.*: 018102d0 +0 SECTION LOCAL +DEFAULT +10 
+.*: 01810370 +0 SECTION LOCAL +DEFAULT +11 
+.*: 0181038c +0 SECTION LOCAL +DEFAULT +12 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +13 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +14 
+.*: [0-9a-f]+ +0 SECTION LOCAL +DEFAULT +15 
+.*: 00000000 +0 TLS +LOCAL +DEFAULT +8 gd4
+.*: 00000004 +0 TLS +LOCAL +DEFAULT +8 ld4
+.*: 00000008 +0 TLS +LOCAL +DEFAULT +8 ld5
+.*: 0000000c +0 TLS +LOCAL +DEFAULT +8 ld6
+.*: 00000010 +0 TLS +LOCAL +DEFAULT +8 ie4
+.*: 00000014 +0 TLS +LOCAL +DEFAULT +8 le4
+.*: 00000018 +0 TLS +LOCAL +DEFAULT +8 le5
+.*: 018102d0 +0 OBJECT +GLOBAL DEFAULT +ABS _DYNAMIC
+.*: 00000000 +0 TLS +GLOBAL DEFAULT +UND gd
+.*: 00000030 +0 TLS +GLOBAL DEFAULT +9 le0
+.*: [0-9a-f]+ +0 FUNC +GLOBAL DEFAULT +UND __tls_get_addr
+.*: 00000020 +0 TLS +GLOBAL DEFAULT +9 ld0
+.*: 00000034 +0 TLS +GLOBAL DEFAULT +9 le1
+.*: 00000000 +0 TLS +GLOBAL DEFAULT +UND ld
+.*: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +7 _start
+.*: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS __end
+.*: 00000028 +0 TLS +GLOBAL DEFAULT +9 ld2
+.*: 00000024 +0 TLS +GLOBAL DEFAULT +9 ld1
+.*: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS __bss_start
+.*: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _edata
+.*: 01810374 +0 OBJECT +GLOBAL +HIDDEN +11 _GLOBAL_OFFSET_TABLE_
+.*: [0-9a-f]+ +0 NOTYPE +GLOBAL DEFAULT +ABS _end
+.*: 0000001c +0 TLS +GLOBAL DEFAULT +9 gd0
+.*: 0000002c +0 TLS +GLOBAL DEFAULT +9 ie0
